Fix that pesky compiler warning